// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayPauseControl 1`] = `
<div
  className="sc-bwzfXH knKTcO"
  onClick={[Function]}
>
  <svg
    viewBox="0 0 20.03 25"
  >
    <path
      d="M7 21.52a3.48 3.48 0 0 1-7 0v-18a3.48 3.48 0 1 1 7 0zm0 0M20 21.52a3.48 3.48 0 0 1-7 0v-18a3.48 3.48 0 0 1 7 0zm0 0"
      fill="#fff"
    />
  </svg>
</div>
`;

exports[`PlayPauseControl 2`] = `
<div
  className="sc-bwzfXH knKTcO"
  onClick={[Function]}
>
  <svg
    viewBox="0 0 21.97 25"
  >
    <path
      d="M21.36 11.45L1.81.16A1.21 1.21 0 0 0 0 1.21v22.58a1.21 1.21 0 0 0 1.81 1l19.55-11.24a1.22 1.22 0 0 0 0-2.11zm0 0"
      fill="#fff"
    />
  </svg>
</div>
`;
